* 20120803 Implemented new --no-send-hints, --no-receive-hints, and
           --no-info-hints options (mostly so I could can copy certs from
           the output of --tls-get-peer-cert).
* 20120805 Fixed bug in TLS and pipe recv code when server has closed
           connection but swaks is expecting data to be present
* 20120805 Fixed bug causing swaks to "double-quit" when a rejected MAIL of
           RCPT was sent _AND_ a --quit MAIL or --quit RCPT was used _AND_
           --pipeline as used.
* 20121014 Fixed to send proper "cancel" of SASL transaction (bare '*') when
           the server returns an improper rspauth.  swaks would understand
           that auth failed, but later than it should have (reported by
           Erwan Legrand)
> 20130209 released 20130209.0
* 20130422 Fixed typo in man page ("test" -> "text"), reported by
           Graeme Hewson.
* 20130906 Fixed some POD formatting errors. Exit code formatting reported by
           both debian and redhat maintainers, caused by Pod::Simple change
           in perl-5.18.1.  Others found playing with podchecker.
* 20140207 Updating copyright to 2014
* 20140207 Updated faq.html with typo and phrasing fixes.  Added note that
           Homebrew and MacPorts both package swaks (h/t Andrew Langhorn)
* 20141128 Fixed local_cert_subject logging bug, reported by Roman Rybalko
* 20141128 Fix incorrect range on XCLIENT rfc1891/xtext encoding caused by
           mixing hex and decimal. Reported by Thomas Szukala
* 20141202 Fixing a couple of "an [CONSONANT]" doc typos
* 20150128 Handle the case where a server advertises XCLIENT but does not
           advertise any supported attributes.
* 20150212 Add %MESSAGEID% token and add Message-Id as a part of the default
           DATA.
* 20150212 Add %SWAKS_VERSION% token and use it by default in the X-Mailer
           header.  Suggested by Jan-Pieter Cornet.
* 20151109 Fixed grammar issue in "About the Name" section